# pottendo-pico-ili9341xpt2046

./: CMakeLists.txt  README.md  settings.cmake
example/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/pico-ili9341xpt2046/: ili9341.c  xpt2046.c  xpt2046.h
